Per app brightness
Change-Id: I2d762f2dac8111ab0bc8a212c7dd1556a9329848

--- a/res/xml/app_profile.xml
+++ b/res/xml/app_profile.xml
@@ -35,19 +35,19 @@
             android:defaultValue="default"
             android:summary="%s" />
 
-        <SwitchPreference
-            android:key="app_profile_reader"
-            android:title="@string/app_profile_reader_title"
-            android:summary="@string/app_profile_reader_summary"
-            android:persistent="false" />
-
-        <!-- ListPreference
+        <ListPreference
             android:key="app_profile_brightness"
             android:title="@string/app_profile_brightness_title"
             android:entries="@array/brightness_listentries"
             android:entryValues="@array/brightness_listvalues"
             android:defaultValue="default"
-            android:summary="%s" / -->
+            android:summary="%s" />
+
+        <SwitchPreference
+            android:key="app_profile_reader"
+            android:title="@string/app_profile_reader_title"
+            android:summary="@string/app_profile_reader_summary"
+            android:persistent="false" />
 
         <!-- SwitchPreference
             android:key="app_profile_pinned"
