--- a/res/values/app_profile_strings.xml
+++ b/res/values/app_profile_strings.xml
@@ -56,4 +56,6 @@
     <string name="app_profile_reader_title">Reader Mode</string>
     <string name="app_profile_reader_summary">Allow CPU to sleep while this app is running</string>
 
+    <string name="app_profile_fps_title">Display frame rate</string>
+
 </resources>
