--- a/res/values/app_profile_arrays.xml
+++ b/res/values/app_profile_arrays.xml
@@ -72,4 +72,21 @@
     	<item>9</item>
     </string-array>
 
+    <string-array name="fps_listentries">
+    	<item>Default(60)</item>
+    	<item>10</item>
+    	<item>30</item>
+    	<item>60</item>
+    	<item>80</item>
+    	<item>90</item>
+     </string-array>
+     <string-array name="fps_listvalues">
+    	<item>0</item>
+    	<item>10</item>
+    	<item>30</item>
+    	<item>60</item>
+    	<item>80</item>
+    	<item>90</item>
+    </string-array>
+
 </resources>
